# CodeReady

./: .gitignore  CodeReady_Handoff.md  README.md  codeready.bat  codeready.ps1  codeready.sh  codeready_todo.md  definitions.sh  flatpak_nix_fix.sh  ssh_remote_module.ps1  ssh_remote_module.sh  todo_patch.md
gui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
gui/src/: App.jsx
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: definitions.rs  main.rs  scanner.rs  scanner_remote.rs  web_server.rs
gui/src/components/: HostSelector.jsx  ProfilesView.jsx  ScanView.jsx  TerminalPanel.jsx  TitleBar.jsx
gui/src/hooks/: remote_i18n_and_api.js  useApi.js  useI18n.js
gui/src/i18n/: translations.js
gui/src/styles/: global.css
